# Video-Analytics-OpenCV

./: README.md  ocv_info.cpp
sample_01_info/: CMakeLists.txt
sample_02_build_info/: CMakeLists.txt
sample_02_build_info/src/: ocv_build_info.cpp
sample_03_image_test/: CMakeLists.txt
sample_03_image_test/src/: ocv_image_test.cpp
sample_04_video_test/: CMakeLists.txt
sample_04_video_test/src/: ocv_video_test.cpp
sample_05_opencl/: CMakeLists.txt
sample_05_opencl/src/: ocv_ocl_info.cpp
